syntax = "proto3";

package proto;

message Msg {
    int64 ErrorNo = 1;
    string  ErrorMsg = 2;
    bytes  Data = 3;
}